# GPU-gridding

./: CMakeLists.txt  LICENSE  Makefile  README  bmp_support.hpp  bmpfile.c  bmpfile.h  datastruct_utils.hpp  gpu_support.cu  gpu_support.hpp  main.cpp  oskar.cu  oskar_grid_wproj.c  oskar_grid_wproj.cpp  oskar_grid_wproj.hpp  oskar_grid_wproj_gpu.cu  oskar_grid_wproj_gpu.hpp  oskar_grid_wproj_tiled_cuda.cu  oskar_grid_wproj_tiled_cuda.h
utils/: check_value.c  check_value.h  oskar_grid_weights.c  oskar_thread.c  oskar_timer.c  read_kernel.c  read_kernel.h  read_vis.c  read_vis.h  rearrange_kernels.c  rearrange_kernels.h  write_fits_cube.c  write_fits_cube.h
utils/binary/: CMakeLists.txt
